2005-08-14  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclExecute.c:	Updated execution of arithmetic bytecodes
	to be bignum-aware, and to allow calculations on NaN to produce
	a NaN result.  INST_UMINUS updated to call mp_neg.

	* generic/tclTomMath.h:	Added mp_and, mp_expt_d, and mp_neg to
	* unix/Makefile.in:	routines from libtommath used by Tcl.
	* win/Makefile.in:
	* win/makefile.vc:

2005-08-13  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclObj.c:	Extended Bignum auto-narrowing to auto-narrow
	to tclWideIntType when appropriate; this helps keep things working as
	the bytecode execution code is migrated to supporting bignums.

	* generic/tclExecute.c:	Major overhaul of IllegalExprOperandType.
	Changed several TclNewFooObj() calls to more logically appropriate
	ones.  Added several TODO comments marking opportunies for future
	work.  Made more use of the eePtr->constants.  Made INST_UMINUS
	bignum aware.

2005-08-12  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclExecute.c:	Simplify doCondJump.  Use eePtr->constants
	as result of INST_DICT_NEXT, INST_LAND, and INST_LOR.  Separate
	INST_LNOT from INST_UMINUS and simplify.

2005-08-11  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclExecute.c:	Rewrite of INST_LAND/INST_LOR to take
	advantage of loss of "pure double" issues.  Merged INST_UPLUS
	with INST_TRY_CVT_TO_NUMERIC and updated to use improved rules
	for impure "double"s as well.

	* generic/tclStrToD.c:	Restored conditional generation of
	tclWideIntType values by TclParseNumber so that Tcl's not
	completely broken while bignum calculation support is incomplete.
	The NO_WIDE_TYPE macro can be used to disable this.

	* generic/tclBasic.c (ExprAbsFunc):	First pass making [expr abs(.)]
	bignum-aware.

2005-08-10  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]
